installer/templates/corex_design/corex/components/select.css
@import "../main.css";

@layer components {
  .select {
    max-width: var(--container-4xs);
    width: 100%;
  }

  .select[data-loading] [data-scope="select"][data-part="root"] {
    @apply ui-loading;
  }

  .select [data-scope="select"][data-part="root"] {
    @apply ui-root;
    gap: var(--spacing-space);
    position: relative;
    padding-inline-end: var(--spacing-space);
  }

  .select [data-scope="select"][data-part="root"][data-readonly],
  .select [data-scope="select"][data-part="root"][data-read-only] {
    @apply ui-readonly;
  }

  .select [data-scope="select"][data-part="label"] {
    @apply ui-label;
  }

  .select [data-scope="select"][data-part="control"] {
    display: flex;
    width: 100%;
    min-width: 0;
    position: relative;

    &[data-focus]:focus-visible {
      outline: none;
      box-shadow: inset 0 0 0 2px var(--color-ink);
    }
  }

  .select [data-scope="select"][data-part="trigger"] {
    @apply ui-trigger;

    justify-content: space-between;
    width: 100%;
    min-width: 0;
    max-width: 100%;
  }

  .select [data-scope="select"][data-part="trigger"] > [data-part="item-text"] {
    flex: 1 1 0%;
    min-width: 0;
    max-width: 100%;
    width: auto;
    overflow: hidden;
    text-overflow: ellipsis;
    white-space: nowrap;
    display: block;
    text-align: start;
  }

  .select [data-scope="select"][data-part="trigger"] > .icon,
  .select [data-scope="select"][data-part="trigger"] > [class^="hero-"] {
    flex-shrink: 0;
  }

  .select [data-scope="select"][data-part="positioner"] {
    position: relative;
  }

  .select [data-scope="select"][data-part="content"] {
    @apply ui-content;

    border: 1px solid var(--color-border);
    z-index: 50;
    padding: 0;
    border-radius: var(--radius-md);
    overflow: hidden;
    box-shadow: var(--shadow-ui);

    &:focus-visible {
      outline: none;
    }

    & [data-part="item"] {
      border-radius: var(--radius-none) !important; 
    }

    & > [data-part="item"]:first-child {
      border-top-left-radius: var(--radius-md) !important; 
      border-top-right-radius: var(--radius-md) !important;
      border-bottom-left-radius: 0 !important;              
      border-bottom-right-radius: 0 !important;             
    }


    & > [data-part="item"]:last-child {
      border-bottom-left-radius: var(--radius-md) !important; 
      border-bottom-right-radius: var(--radius-md) !important;
      border-top-left-radius: 0 !important;                    
      border-top-right-radius: 0 !important;                   
    }

    
    & > [data-part="item-group"]:last-child [data-part="item"]:last-child {
      border-bottom-left-radius: var(--radius-md) !important; 
      border-bottom-right-radius: var(--radius-md) !important;
    }

  }

  .select [data-scope="select"][data-part="item-group"] {
    display: flex;
    flex-direction: column;
  }

  .select [data-scope="select"][data-part="item-group-label"] {
    @apply ui-label;
    
    background-color: var(--color-root);
    color: var(--color-ink);
    border-bottom: 1px solid var(--color-border);
    border-top: 1px solid var(--color-border);
    box-shadow: var(--shadow-ui);
    padding-inline-start: --spacing(4);
  }

  .select [data-scope="select"][data-part="item"] {
    @apply ui-item;
  }

  .select [data-scope="select"][data-part="content"] [data-part="item-text"] {
    flex: 1 1 0%;
    min-width: 0;
    max-width: 100%;
    width: auto;
    overflow: hidden;
    text-overflow: ellipsis;
    white-space: nowrap;
    display: block;
    text-align: start;
  }

  .select [data-scope="select"][data-part="item-indicator"] {
    @apply ui-icon;
  }

  .select [data-scope="select"][data-part="content"] [data-part="item-indicator"] {
    flex-shrink: 0;
    padding-inline-end: var(--spacing-space);
  }


  .select [data-scope="select"][data-part="error"] {
    @apply ui-error;
  }
}


@utility select--* {
  [data-scope="select"][data-part="root"] {
    gap: --value(--spacing-space-*, [length]);
  }

  [data-scope="select"][data-part="label"] {
    font-size: --value(--text-*, [length]);
    line-height: --value(--text-*--line-height, [length]);
  }

  [data-scope="select"][data-part="control"] {
    max-width: --value(--container-*, [length]);
    gap: --value(--spacing-space-*, [length]);
  }

  [data-scope="select"][data-part="trigger"] {
    font-size: --value(--text-*, [length]);
    line-height: --value(--text-*--line-height, [length]);
    padding-inline: --value(--spacing-space-*, [length]);
    gap: --value(--spacing-space-*, [length]);
    min-height: --value(--spacing-size-*, [length]);
    color: --value(--color-*-ink, [color]);
  }

  [data-scope="select"][data-part="trigger"] .icon,
  [data-scope="select"][data-part="trigger"] [class^="hero-"] {
    color: inherit;
  }

  [data-scope="select"][data-part="trigger"] svg {
    fill: currentColor;
  }

  [data-scope="select"][data-part="item"] {
    font-size: --value(--text-*, [length]);
    line-height: --value(--text-*--line-height, [length]);
    padding-inline: --value(--spacing-space-*, [length]);
    gap: --value(--spacing-space-*, [length]);
  }

  [data-scope="select"][data-part="content"] [data-part="item-indicator"] {
    padding-inline-end: --value(--spacing-space-*, [length]);
  }

  [data-scope="select"][data-part="item-group-label"] {
    font-size: --value(--text-*, [length]);
    line-height: --value(--text-*--line-height, [length]);
  }

  [data-scope="select"][data-part="item"][data-selected],
  [data-scope="select"][data-part="item"][data-state="checked"] {
    background-color: var(--color-ui);
    color: --value(--color-*-ink, [color]);
  }

  [data-scope="select"][data-part="item"][data-selected]:hover,
  [data-scope="select"][data-part="item"][data-state="checked"]:hover {
    background-color: var(--color-ui-hover);
    color: --value(--color-*-ink, [color]);
  }

  [data-scope="select"][data-part="item"][data-selected]:active,
  [data-scope="select"][data-part="item"][data-state="checked"]:active {
    background-color: var(--color-ui-active);
    color: --value(--color-*-ink, [color]);
  }

  [data-scope="select"][data-part="item"][data-selected]:focus-visible,
  [data-scope="select"][data-part="item"][data-state="checked"]:focus-visible {
    outline: none;
    box-shadow: inset 0 0 0 2px --value(--color-*-ink, [color]);
  }

  @media (hover: hover) {
    [data-scope="select"][data-part="item"][data-highlighted]:not(:hover) {
      outline: none;
      box-shadow: inset 0 0 0 2px var(--color-ink);
      background-color: var(--color-ui-hover);
      color: var(--color-ink);
    }
  }

  @media (hover: none) {
    [data-scope="select"][data-part="item"][data-highlighted] {
      outline: none;
      box-shadow: inset 0 0 0 2px var(--color-ink);
      background-color: var(--color-ui-hover);
      color: var(--color-ink);
    }
  }

  [data-scope="select"][data-part="item"][data-selected][data-highlighted],
  [data-scope="select"][data-part="item"][data-state="checked"][data-highlighted] {
    outline: none;
    box-shadow: inset 0 0 0 2px --value(--color-*-ink, [color]);
    background-color: var(--color-ui-hover);
    color: --value(--color-*-ink, [color]);
  }
}

@utility select--rounded-* {
  [data-scope="select"][data-part="trigger"] {
    border-radius: --value(--radius-*, [length]);
  }
}

@utility select--text-* {
  [data-scope="select"][data-part="label"] {
    font-size: --value(--text-*, [length]);
    line-height: --value(--text-*--line-height, [length]);
  }

  [data-scope="select"][data-part="trigger"] {
    font-size: --value(--text-*, [length]);
    line-height: --value(--text-*--line-height, [length]);
  }

  [data-scope="select"][data-part="item"] {
    font-size: --value(--text-*, [length]);
    line-height: --value(--text-*--line-height, [length]);
  }

  [data-scope="select"][data-part="item-group-label"] {
    font-size: --value(--text-*, [length]);
    line-height: --value(--text-*--line-height, [length]);
  }
}

